# MedScore

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py  test_pip_installation.sh
code/: GPT_decomp.py  example_code.sh  medrag_vllm.sh  utils.py
data/: askdocsai_evidence.json  calmqa_english.jsonl
demo/: config.yaml  config_medrag.yaml  config_medrag_preretrieved.yaml  example_code.sh
medscore/: config_schema.py  decomposer.py  medrag_retriever.py  medrag_utils.py  medscore.py  prompts.py  registry.py  retriever.py  utils.py  verifier.py
prompt/: Custom_prompt.txt  FactScore_prompt.txt  MedFact_decontext.txt  MedScore_Ablation_prompt.txt
result/PUMA_gpt4o/: medscore_output.jsonl
